--- a/aula1106/style.css
+++ b/aula1106/style.css
@@ -24,6 +24,10 @@ body {
     background: linear-gradient(rgba(0,0,0,.2),transparent);
 }
 
+.formularioPagLogo {
+    text-align: right!important;
+}
+
 .textPagLogo {
 	border-radius: 5px;
     font-size: 14px;
@@ -46,7 +50,7 @@ body {
 .botaoNavbarPagLogo {
 	background-color: #99c432;
     margin: 1px 0 1px 10px;
-    padding: 9px 18px;
+    padding: 10px 18px;
     font-size: 14px;
     line-height: 1.2;
     box-sizing: border-box;
@@ -64,7 +68,7 @@ body {
 .DropdownNavbarPagLogo {
 	background-color: #89b02c;
 	margin: 1px 0px;
-    padding: 9px 10px;
+    padding: 10px 10px;
     font-size: 14px;
     line-height: 1.2;
     box-sizing: border-box;
@@ -79,15 +83,49 @@ body {
     border-bottom-left-radius: 0;
 }
 
+.figNavPagLogo {
+    font-size: 23px;
+}
 
+.opcoesNavPagLogo {
+    padding: 8px 15px;
+    color: white;
+    display: block;
+    border-radius: 5px;
+    margin: 10px 18px;
+    text-align: center;
+}
 
+#botaoBlueNavbarPagLogo {
+    background-color: #3b5998;
+}
 
+#botaoRedNavbarPagLogo {
+    background-color: #dd4b39;
+    padding: 8px 22px;
+}
 
+.textOpcaoPagLogo {
+    font-size: 15px;
+    position: relative;
+    top: -2px;
+}
 
-
-
-
-
+.linkDecoradoNavPagLogo {
+    color: #fff!important;
+    padding: 8px 18px;
+    margin-left: 10px;
+    position: relative;
+    top: 10px;
+    background-color: #222;
+    background-color: rgba(0,0,0,.4);
+    border: 2px solid transparent;
+    border-radius: 5px;
+    outline-width: 0;
+    transition: background-color .2s ease;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 
 
