--- a/aula1106/style.css
+++ b/aula1106/style.css
@@ -15,6 +15,8 @@ body {
 
 /* CSS PARA A PÁGINA DE LOGO */
 
+/* NAVBAR */
+
 .navbarPagLogo {
 	position: absolute;
     width: 100%;
@@ -127,14 +129,37 @@ body {
     cursor: pointer;
 }
 
+/* FECHAMENTO NAVBAR */
 
+/* CARD NICK */
 
+svg {
+    position: relative;
+    top: auto;
+    left: auto;
+}
 
+.card-nick {
+    background-color: #fff;
+    text-align: center;
+    margin-top: 250px;
+    width: 455px;
+    transition: transform .05s ease,padding .5s ease;
+    padding: 50px 12px 15px;
+    position: relative;
+    top: auto;
+    left: auto;
+    z-index: 10;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+    -webkit-font-smoothing: subpixel-antialiased;
+}
 
-
-
-
-
+.form-entrada {
+    text-align: justify;
+}
 
 
 
