--- a/aula1106/style.css
+++ b/aula1106/style.css
@@ -457,29 +457,96 @@
     border-radius: 5px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* FECHAMENTO CSS DO PERFIL */
 
+/* CSS FOTOS */
+
+.card-fotos {
+    margin: auto;
+    background-color: #fff;
+    margin-top: 50px;
+    width: auto;
+    border: 1px solid #20c4cb;
+    border-radius: 5px;
+}
+
+.card-fotos-inicial {
+    margin-top: 100px;
+}
+
+.img-card-foto {
+    border: 2px solid #20c4cb;
+    padding: 3px;
+}
+
+.img-foto {
+    width: 100%;
+}
+
+/* FECHAMENTO CSS FOTOS */
+
+/* CSS AMIGOS */
+
+.card-amigos {
+    margin: auto;
+    background-color: #fff;
+    margin-top: 100px;
+    width: auto;
+    border: 1px solid #dcdcdc;
+    border-radius: 5px;
+}
+
+.titulo-card-amigos {
+    height: 50px;
+    text-align: center;
+}
+
+.descricao-amigos {
+    color: #20c4cb;
+    font-size: 30px;
+}
+
+.img-amigos {
+    width: 100%
+}
+
+/* FECHAMENTO CSS AMIGOS */
+
+/* CSS MENSAGENS */
+
+.container {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.conteudo {
+    margin: auto;
+    margin-top: 75px;
+    width: 100%;
+}
+
+.bate-papo-amigos {
+    text-align: justify;
+    width: 100%;
+    height: 80px;
+    background-color: #fafafa;
+    border-bottom: 1px solid #117a8b;
+    border-right: 1px solid #117a8b;
+}
 
 
 
+.bate-papo-mensagens {
+    width: 100%;
+    height: 800px;
+    background-color: #fafafa;
+}
+
+
+
+/* FECHAMENTO CSS MENSAGENS*/
 
 /* FECHAMENTO CSS PARA A PÁGINAS DA REDE SOCIAL */
 
