--- a/aula1106/style.css
+++ b/aula1106/style.css
@@ -407,6 +407,10 @@
     color: red;
 }
 
+.comentario {
+    color: gray;
+}
+
 /* CSS DO PERFIL */
 
 .foto-capa {
@@ -422,6 +426,15 @@
     position: absolute;
     top: 435px;
     left: 90px;
+}
+
+.person-foto-perfil {
+    position: absolute;
+    top: 490px;
+    left: 360px;
+    color: #fff;
+    font-size: 55px;
+    font-weight: 700;
 }
 
 .navbarPerfil {
@@ -514,97 +527,79 @@
 
 /* CSS MENSAGENS */
 
-.container {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+.ajuste {
+    margin-top: 100px;
 }
 
-.conteudo {
-    margin: auto;
-    margin-top: 75px;
-    width: 100%;
+hr {
+    background-color: #c1c1c1;
 }
 
-.bate-papo-amigos {
-    text-align: justify;
-    width: 100%;
-    height: 80px;
-    background-color: #fafafa;
-    border-bottom: 1px solid #117a8b;
-    border-right: 1px solid #117a8b;
+.bate-papo {
+    border: 1px solid #c1c1c1;
+    background-color: #ffffff;
+    padding: 10px;
 }
 
-
-
-.bate-papo-mensagens {
-    width: 100%;
-    height: 800px;
-    background-color: #fafafa;
+.hora {
+    font-size: 13px;
+    display: block;
+    position: relative;
+    top: 32px;
 }
 
+.divRight {
+    display: block;
+    text-align: right;
+    float: right;
+    color: #90949c;
+}
 
+.image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    display: inline;
+}
+
+.divConversa {
+    display: inline-block;
+    position: relative;
+    top: 20px;
+}
+
+.pessoa {
+    font-size: 25px;
+    display: inline-flex;
+}
+
+i.far.fa-circle {
+    position: relative;
+    top: 40px;
+}
+
+i.fas.fa-circle {
+    font-size: 10px;
+    display: inline;
+    color: #63a924;
+    position: relative;
+    top: -4px;
+}
+
+.divConversacao {
+    display: block;
+}
+
+i.fas.fa-check {
+    font-size: 15px;
+    display: inline;
+}
+
+.conversa {
+    font-size: 15px;
+    display: inline;
+}
 
 /* FECHAMENTO CSS MENSAGENS*/
 
 /* FECHAMENTO CSS PARA A PÁGINAS DA REDE SOCIAL */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
